test/files/neg/macro-invalidret-nonuniversetree.check
Macros_Test_2.scala:2: error: macro implementation has wrong shape:
 required: (c: scala.reflect.macros.Context): c.universe.Tree
 found   : (c: scala.reflect.macros.Context): reflect.runtime.universe.Literal
type mismatch for return type: reflect.runtime.universe.Literal does not conform to c.universe.Tree
  def foo = macro Impls.foo
                        ^
one error found
